--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -18,11 +18,11 @@
   color: var(--primary-white-color);
 
   transition: color 250ms var(--cubic-bezier);
-}
 
-.page-footer__address:hover,
-.page-footer__address:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .page-footer__link .link {
@@ -35,11 +35,11 @@
   font-style: normal;
 
   transition: color 250ms var(--cubic-bezier);
-}
 
-.page-footer__link .link:hover,
-.page-footer__link .link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .page-footer__network {
@@ -49,7 +49,7 @@
 .page-footer__title {
   margin-bottom: 20px;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: '' Roboto '', sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -91,14 +91,14 @@
   color: var(--primary-white-color);
 
   transition: background-color 250ms var(--cubic-bezier);
-}
 
-.page-footer__network-button:hover {
-  background-color: var(--accent-color);
-}
+  &:hover {
+    background-color: var(--accent-color);
+  }
 
-.network__link:focus .page-footer__network-button {
-  background-color: var(--accent-color);
+  .network__link:focus & {
+    background-color: var(--accent-color);
+  }
 }
 
 .page-footer__subscription {
@@ -119,7 +119,7 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
 
-  font-family: 'Roboto';
+  font-family: '' Roboto '';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -140,7 +140,7 @@
   border-radius: 4px;
   cursor: pointer;
 
-  font-family: 'Roboto';
+  font-family: '' Roboto '';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
