--- a/sass/layouts/_job-description.scss
+++ b/sass/layouts/_job-description.scss
@@ -18,7 +18,7 @@
   padding-top: 27px;
   padding-bottom: 27px;
 
-  font-family: 'Roboto', sans-serif;
+  font-family: '' Roboto '', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
